--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<title>Vish Singh - Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -44,8 +44,9 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>This is Solid State</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+							<h2>Vish Singh</h2>
+							<!-- <p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p> -->
+							<p>Full-stack web development student at Lambda School</p>
 						</div>
 					</section>
 
@@ -55,10 +56,11 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<!-- <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a> -->
+									<a href="#" class="image"><img src="images/v1.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Frontend Development</h2>
+										<p>One week at <a href="http://lambdaschool.com/">Lambda School</a> has taught me the basics of semantic HTML and CSS, including a start at responsive web design, the pains of inline-block and the mighty Flexbox!</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -95,15 +97,16 @@
 									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<!-- <a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a> -->
+											<a href="#" class="image"><img src="images/sweet-eats.jpg" alt="Sweet Eats Bakery" /></a>
+											<h3 class="major">Sweet Eats Bakery</h3>
+											<p>Sweet Eats was my first project at Lambda School. It called for me to utilize knowledge of CSS selectors, properties and inheritance to add some style to the Sweet Eats Bakery website.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/sprint-1.jpg" alt="" /></a>
+											<h3 class="major">Week 1 Sprint Challenge</h3>
+											<p>In this challenge, I built a missing header (navigation and image) on the home page, updated CSS styling (solving specificity problems) and created an additional page (About) which linked from the new navigation.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
