Completed initial website updates. Need to host it after merge to complete MVP

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Vish Singh - Full-Stack Web Development</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -60,7 +60,7 @@
 									<a href="#" class="image"><img src="images/v1.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Frontend Development</h2>
-										<p>One week at <a href="http://lambdaschool.com/">Lambda School</a> has taught me the basics of semantic HTML and CSS, including a start at responsive web design, the pains of inline-block and the mighty Flexbox!</p>
+										<p>One week at <a href="http://lambdaschool.com/">Lambda School</a> has taught me the basics of semantic HTML and CSS, including the pains of inline-block, the mighty Flexbox and a start at responsive web design!</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -69,10 +69,10 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/v2.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Backend Development</h2>
+										<p>Three weeks into <a href="http://lambdaschool.com/">Lambda School</a>'s full stack web development program begins my JavaScript entanglement - a key to backend development. This will include JavaScript fundamentals, Applied JavaScript, React and Node.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -81,10 +81,10 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/v5.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Father, bass enthusiast, extreme metaller</h2>
+										<p>Intertwined with my coding interests are my roles as a father & husband, my study of electric bass (its not a guitar!) and my love of extreme metal, food, air frying & the Instant Pot.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -93,33 +93,33 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Selected Works</h2>
+									<p>The start of my education in web development has progressed quickly. In a week's time I've managed to go from 'Hello World' in CodePen to writing an adaptive website using HTML and CSS in VS Code. I blog about it regularly, sharing my experiences with a growing readership and reinforcing my understanding by explaining it in essay form.</p>
 									<section class="features">
 										<article>
 											<!-- <a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a> -->
 											<a href="#" class="image"><img src="images/sweet-eats.jpg" alt="Sweet Eats Bakery" /></a>
 											<h3 class="major">Sweet Eats Bakery</h3>
-											<p>Sweet Eats was my first project at Lambda School. It called for me to utilize knowledge of CSS selectors, properties and inheritance to add some style to the Sweet Eats Bakery website.</p>
-											<a href="#" class="special">Learn more</a>
+											<p>Sweet Eats was my first project at <a href="http://lambdaschool.com/">Lambda School</a>. It called for me to utilize knowledge of CSS selectors, properties and inheritance to add some style to the Sweet Eats Bakery website.</p>
+											<a href="https://codepen.io/vishalicious/pen/WVdwPN" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/sprint-1.jpg" alt="" /></a>
 											<h3 class="major">Week 1 Sprint Challenge</h3>
-											<p>In this challenge, I built a missing header (navigation and image) on the home page, updated CSS styling (solving specificity problems) and created an additional page (About) which linked from the new navigation.</p>
-											<a href="#" class="special">Learn more</a>
+											<p>For my first sprint challenge, I built a missing header (navigation and image) on the home page, updated CSS styling (solving specificity problems) and created an additional page which linked from the new navigation.</p>
+											<a href="https://github.com/vishalicious213/Sprint-Challenge--User-Interface" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/responsive.jpg" alt="" /></a>
+											<h3 class="major">Adaptive website</h3>
+											<p>My first foray into responsive web design, this project refactors a website I had built using HTML and CSS with inline-block and then upgraded with Flexbox. Its now adaptive, with breakpoints for optimal viewing on desktops, tablets and mobile devices.</p>
+											<a href="https://github.com/vishalicious213/responsive-web-design-I" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/blog.jpg" alt="" /></a>
+											<h3 class="major">REDO FROM START</h3>
+											<p>My programming blog details my experience learning how to think like a programmer, grasp computer science concepts and, of course, tackling coding projects. A good portion of it centers around <a href="http://lambdaschool.com/">Lambda School</a> and its web developer curriculum.</p>
+											<a href="https://neophyte.home.blog/" class="special">Learn more</a>
 										</article>
 									</section>
 									<ul class="actions">
@@ -134,7 +134,7 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<p>Lets build the future together! If you have a need for a website or an idea for a web application, lets design it and show it to the world. Prior to my endeavor to become a full-stack developer, I already worked in software development as a designer for a clinical EMR for long-term care. I didn't know code then, and helped build a system that was ahead of its time. Now, I've started building skills to craft websites and web applications. Let me exercise this knowledge by putting it to work for you!</p>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -158,13 +158,16 @@
 								<li class="icon solid fa-home">
 									Untitled Inc<br />
 									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
+									Yonkers, NY 00000-0000
 								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<!-- <li class="icon solid fa-phone">(000) 000-0000</li> -->
+								<li class="icon brands fa-wordpress"><a href="https://neophyte.home.blog/">neophyte.home.blog</a></li>
+								<li class="icon brands fa-facebook-f"><a href="https://www.facebook.com/vish213">facebook.com/vish213</a></li>
+								<li class="icon brands fa-twitter"><a href="https://twitter.com/vishalicious213">twitter.com/vishalicious213</a></li>
+								<li class="icon brands fa-instagram"><a href="https://www.instagram.com/vishalicious213/">instagram.com/vishalicious213</a></li>
+								<li class="icon solid fa-envelope"><a href="mailto:vishalicious213@gmail.com">vishalicious213@gmail.com</a></li>
+								<!-- <li class="icon brands fa-wordpress-simple"></li> -->
+								<!-- <i class="fab fa-wordpress-simple"></i> -->
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
