changed project URLs

--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
 											<a href="#" class="image"><img src="images/sprint-1.jpg" alt="" /></a>
 											<h3 class="major">Week 1 Sprint Challenge</h3>
 											<p>For my first sprint challenge, I built a missing header (navigation and image) on the home page, updated CSS styling (solving specificity problems) and created an additional page which linked from the new navigation.</p>
-											<a href="https://github.com/vishalicious213/Sprint-Challenge--User-Interface" class="special">Learn more</a>
+											<a href="https://github.com/vishalicious213/1.5-Sprint-Challenge--User-Interface" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/responsive.jpg" alt="" /></a>
 											<h3 class="major">Adaptive website</h3>
 											<p>My first foray into responsive web design, this project refactors a website I had built using HTML and CSS with inline-block and then upgraded with Flexbox. Its now adaptive, with breakpoints for optimal viewing on desktops, tablets and mobile devices.</p>
-											<a href="https://github.com/vishalicious213/responsive-web-design-I" class="special">Learn more</a>
+											<a href="https://github.com/vishalicious213/2.1-responsive-web-design-I" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/blog.jpg" alt="" /></a>
